# Rainbreak

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  phase.rs
docs/: implementation-plan.md  macos-fullscreen-gate.md  requirements-v3.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  glue.rs  macos.rs  main.rs  scheduler.rs  shortcuts.rs  state.rs  tray.rs  updater.rs  windows.rs
src/lib/: motion.ts
src/lib/audio/: RainAudio.ts  index.ts
src/lib/ipc/: commands.ts  events.ts  index.ts  types.ts
src/lib/rain/: Canvas2DRainBackend.ts  RainRenderer.ts  RaindropFxBackend.ts  index.ts  types.ts
src/routes/: +layout.ts  +page.svelte
src/routes/hud/: +page.svelte
src/routes/overlay/: +page.svelte
src/routes/settings/: +page.svelte
tools/: gen-assets.mjs  rename-release-assets.mjs
