[package]
name = "rainbreak"
version = "0.1.0"
description = "雨やどり / Rainbreak — 通り雨で休む作業タイマー"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 透過ウィンドウ（macos-private-api）とトレイ（tray-icon）を使う。
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt", "macros", "sync"] }

# 時間の真実（状態機械）は Tauri 非依存のコアクレートに分離（テスト容易性）。
rainbreak-core = { path = "../crates/core" }

[features]
# 既定。Tauri テンプレート互換のためのプレースホルダ。
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
